# SpiROSE

./: .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  CONTRIBUTING.md  Makefile  README.md
FPGA/: .gitignore  Makefile  verilator.vlt
FPGA/lib/: driver_cmd.c  driver_cmd.h  driver_cmd.mk  test_driver_cmd.c
FPGA/modelsim/: Makefile
FPGA/quartus/: EP3C40.qpf  EP3C40.qsf  EP3C40.sv  EP3C40.v  Makefile  pin_assignment.tcl  spirose.qsf  spirose.sdc
FPGA/quartus-de1soc/: DE1_SoC.asm.rpt  DE1_SoC.cdf  DE1_SoC.done  DE1_SoC.fit.rpt  DE1_SoC.fit.summary  DE1_SoC.flow.rpt  DE1_SoC.jdi  DE1_SoC.map.rpt  DE1_SoC.map.summary  DE1_SoC.pin  DE1_SoC.qsf  DE1_SoC.qws  DE1_SoC.sta.rpt  DE1_SoC.sta.summary  DE1_SoC.sv  clk_33.bsf  clk_33.cmp  clk_33.ppf  clk_33.qip  clk_33.sip  clk_33.spd  clk_33.v  clk_33_sim.f  clk_66.qip  clk_66.v
FPGA/sim/: Makefile  base_testbench.mk  column_mux.mk  driver_controller.mk  framebuffer.mk  hall_sensor.mk  rgb_logic.mk  sensor.mk  spi.mk  spi_iff.mk  spi_slave.mk
FPGA/src/: .driver_controller.sv.swp  DE1_SoC.sv  SEG7_LUT.sv  clk.qip  clk.sip  clk.v  (+59 more)
LCD_Display/: .clang-format  .gitignore  Makefile  README.md  degrade_bleu.h  gfxconf.h  main.c  romfs_files.h  stm32f7xx_hal_conf.h  userfonts.h  widget.c  widget.h
PCB/: README.md  Test_LED.7z
SBC/: Makefile
shader/: basic.fs  basic.gs  basic.vs
src/: main.cpp
tools/: ciii_epe_2010.xls  cycloneiii_io_timing_qii80sp1.xls  spec.py
tools/spi_cli/: Cargo.toml
tools/spi_cli/data/: test_conf.toml
tools/spi_cli/src/: cli.yml  commands.rs  framebuffer.rs  main.rs  test.rs  units.rs
(+1842 files in other folders)
