[package]
authors = ["Clément Decoodt <clement@decoodt.eu>"]
name = "spi_cli"
version = "0.1.0"

[dependencies]
error-chain = "0.11.0"
image = "0.18.0"
packed_struct = "*"
packed_struct_codegen = "*"
serde = "*"
serde_derive = "*"
spidev = "*"
toml = "*"

[dependencies.clap]
features = ["yaml"]
version = "*"
