[package]
authors = ["Clément Decoodt <clement@decoodt.eu>"]
name = "spi_cli"
version = "0.1.0"

[dependencies]
error-chain = "0.12.0"
image = "0.20.0"
packed_struct = "0.1"
packed_struct_codegen = "0.1"
serde = "1.0.55"
serde_derive = "1.0.55"
spidev = "0.3.0"
toml = "0.4.6"

[dependencies.clap]
features = ["yaml"]
version = "*"
